<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_existencia"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto_existencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto_precio"
        app:layout_constraintBottom_toTopOf="@+id/txt_existencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_id"
        app:layout_constraintBottom_toTopOf="@+id/tv_nombre"
        app:layout_constraintEnd_toStartOf="@+id/txt_id"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/txt_id"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto_id"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto_nombre"
        app:layout_constraintBottom_toTopOf="@+id/txt_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        app:layout_constraintBottom_toTopOf="@+id/tv_precio"
        app:layout_constraintEnd_toStartOf="@+id/txt_nombre"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/tv_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_precio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_precio"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/tv_existencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_existencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_existencia"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="107dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/texto_insertar"
        app:layout_constraintBottom_toTopOf="@+id/btn_eliminar"
        app:layout_constraintEnd_toStartOf="@+id/btn_actualizar"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@id/tv_existencia"
        app:layout_constraintTop_toBottomOf="@+id/tv_existencia"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginBottom="292dp"
        android:text="@string/texto_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ver"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/texto_actualizar"
        app:layout_constraintBottom_toTopOf="@+id/btn_ver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_existencia"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="292dp"
        android:text="@string/texto_ver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>