<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:alpha="@dimen/material_emphasis_high_type"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/producto" />

            <TextView
                android:id="@+id/titulo_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/source_code_pro_semibold"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:text="@string/texto_nombre"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/campo_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Codigo del producto" />

            <EditText
                android:id="@+id/campo_codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_codigobarra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Codigo de barras" />

            <EditText
                android:id="@+id/campo_codigobarra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="estado" />

            <Switch
                android:id="@+id/switch_estatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/titulo_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Marca" />

            <EditText
                android:id="@+id/campo_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_unidadmedida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unidad de medida" />

            <EditText
                android:id="@+id/campo_medida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo subcategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SubCategoria" />

            <EditText
                android:id="@+id/campo_subcategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/source_code_pro_semibold"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:text="@string/texto_precio"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/campo_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/titulo_existencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/source_code_pro_semibold"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:text="@string/texto_existencia"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/campo_existencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/button_update"
                android:text="@string/texto_insertar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>